@@ -1,5 +1,5 @@
 #
-# "$Id: cups.list.in,v 1.17 2002/01/26 21:42:45 mike Exp $"
+# "$Id: cups.list.in,v 1.18 2002/01/31 12:59:51 mike Exp $"
 #
 #   ESP Package Manager (EPM) file list for the Common UNIX Printing
 #   System (CUPS).
@@ -191,12 +191,17 @@ d 1700 $CUPS_USER sys $REQUESTS/tmp -
 
 # Data files
 f 0444 root sys $LOCALEDIR/C/cups_C locale/C/cups_C
+f 0444 root sys $LOCALEDIR/be/cups_be locale/be/cups_be
 f 0444 root sys $LOCALEDIR/cs/cups_cs locale/cs/cups_cs
 f 0444 root sys $LOCALEDIR/de/cups_de locale/de/cups_de
 f 0444 root sys $LOCALEDIR/en/cups_en locale/en/cups_en
 f 0444 root sys $LOCALEDIR/es/cups_es locale/es/cups_es
 f 0444 root sys $LOCALEDIR/fr/cups_fr locale/fr/cups_fr
 f 0444 root sys $LOCALEDIR/it/cups_it locale/it/cups_it
+f 0444 root sys $LOCALEDIR/ru_RU.cp1251/cups_ru_RU.cp1251 locale/ru_RU.cp1251/cups_ru_RU.cp1251
+f 0444 root sys $LOCALEDIR/ru_RU.koi8r/cups_ru_RU.koi8r locale/ru_RU.koi8r/cups_ru_RU.koi8r
+f 0444 root sys $LOCALEDIR/uk/cups_uk locale/uk/cups_uk
+f 0444 root sys $LOCALEDIR/uk_UA.cp1251/cups_uk_UA.cp1251 locale/uk_UA.cp1251/cups_uk_UA.cp1251
 f 0444 root sys $LOCALEDIR/zh_CN/cups_zh_CN locale/zh_CN/cups_zh_CN
 
 d 0555 root sys $DATADIR -
@@ -391,5 +396,5 @@ f 0444 root sys $AMANDIR/man$MAN8DIR/lpmove.$MAN8EXT man/lpmove.man
 i 0555 root sys cups cups.sh
 
 #
-# End of "$Id: cups.list.in,v 1.17 2002/01/26 21:42:45 mike Exp $".
+# End of "$Id: cups.list.in,v 1.18 2002/01/31 12:59:51 mike Exp $".
 #
